--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,26 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <!-- Primary Meta Tags -->
+     <!-- Primary Meta Tags -->
 <meta name="title" content="購物網">
 <meta name="description" content="嗨這是購物網，一個很好用的購物網">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://shayting.github.io/Shop-front/#/">
+<meta property="og:url" content="https://shayting.github.io/Shop-front/">
 <meta property="og:title" content="購物網">
 <meta property="og:description" content="嗨這是購物網，一個很好用的購物網">
 <meta property="og:image" content="https://shayting.github.io/Shop-front/slide02.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://shayting.github.io/Shop-front/#/">
+<meta property="twitter:url" content="https://shayting.github.io/Shop-front/">
 <meta property="twitter:title" content="購物網">
 <meta property="twitter:description" content="嗨這是購物網，一個很好用的購物網">
 <meta property="twitter:image" content="https://shayting.github.io/Shop-front/slide02.jpg">
+  </head>
+  <body>
+   
 <noscript>
   <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
